--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <title>food delivey</title>
-    <link rel="stylesheet" href="food.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <center>
